--- a/index.html
+++ b/index.html
@@ -85,6 +85,7 @@
       $(document).ready(function () {
         //Fetch All Records
         function loadtable() {
+          $("#load-table").html("");
           $.ajax({
             url: "http://localhost/PHP_REST_API/api_fetch_all.php",
             type: "GET",
@@ -125,6 +126,55 @@
           });
         }
         loadtable();
+        //Function for show Success and Error Message
+        function message(message, status) {
+          if (status === true) {
+            $("#success-message").html(message).slideDown();
+            setTimeout(() => {
+              $("#success-message").html(message).slideUp();
+            }, 3000);
+          } else if (status === false) {
+            $("#error-message").html(message).slideDown();
+            setTimeout(() => {
+              $("#error-message").html(message).slideUp();
+            }, 3000);
+          }
+        }
+        //function for form data to JSON object
+        function jsonData(targetForm) {
+          var arr = $(targetForm).serializeArray();
+          var obj = {};
+          for (var a = 0; a < arr.length; a++) {
+            if (arr[a].value === "") {
+              return false;
+            }
+            obj[arr[a].name] = arr[a].value;
+          }
+          var jsonString = JSON.stringify(obj);
+          return jsonString;
+        }
+
+        //Insert new Record
+        $("#save-button").on("click", function (e) {
+          e.preventDefault();
+          var jsonObj = jsonData("#addForm");
+          if (jsonObj === false) {
+            message("All fields are required", false);
+          } else {
+            $.ajax({
+              url: "http://localhost/PHP_REST_API/api_insert.php",
+              type: "POST",
+              data: jsonObj,
+              success: function (data) {
+                message(data.message, data.status);
+                if (data.status === true) {
+                  loadtable();
+                  $("#addForm").trigger("reset");
+                }
+              },
+            });
+          }
+        });
         //Fetch single record .Show in modal box
         $(document).on("click", ".edit-btn", function () {
           $("#modal").show();
@@ -147,6 +197,48 @@
         $("#close-btn").on("click", function () {
           $("#modal").hide();
         });
+        //Update data
+        $("#edit-submit").on("click", function (e) {
+          e.preventDefault();
+          var jsonObj = jsonData("#edit-form");
+          if (jsonObj === false) {
+            message("All fields are required", false);
+          } else {
+            $.ajax({
+              url: "http://localhost/PHP_REST_API/api_update.php",
+              type: "POST",
+              data: jsonObj,
+              success: function (data) {
+                message(data.message, data.status);
+                if (data.status === true) {
+                  $("#modal").hide();
+                  loadtable();
+                }
+              },
+            });
+          }
+        });
+        //Delete Record
+        // $(document).on("click", ".delete-btn", function () {
+        //   if (confirm("Do you want to delete this record?")) {
+        //     var studentId = $(this).data("id");
+        //     var obj = { sid: studentId };
+        //     var myJson = JSON.stringify(obj);
+        //     var row = this;
+        //     $.ajax({
+        //       url: "http://localhost/PHP_REST_API/api_delete.php",
+        //       type: "POST",
+        //       data: myJson,
+        //       success: function (data) {
+        //         message(data.message, data.status);
+        //         if (data.status === true) {
+        //           loadtable();
+        //           $(row).closest("tr").fadeOut();
+        //         }
+        //       },
+        //     });
+        //   }
+        // });
       });
     </script>
   </body>
