--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
             <tr>
               <th width="40px">Id</th>
               <th>Name</th>
-              <th width="50px">Age</th>
               <th width="150px">City</th>
+              <th width="50px">Age</th>
               <th width="60px">Edit</th>
               <th width="70px">Delete</th>
             </tr>
@@ -93,7 +93,7 @@
               if (data.status === false) {
                 //If api has no data
                 $("#load-table").append(
-                  "<tr><td colspan='6'><h2>" + data.message + "</h2></tr></td>"
+                  "<tr><td colspan='6'><h2>" + data.message + "</h2></td></tr>"
                 );
               } else {
                 //if api has data
@@ -219,26 +219,71 @@
           }
         });
         //Delete Record
-        // $(document).on("click", ".delete-btn", function () {
-        //   if (confirm("Do you want to delete this record?")) {
-        //     var studentId = $(this).data("id");
-        //     var obj = { sid: studentId };
-        //     var myJson = JSON.stringify(obj);
-        //     var row = this;
-        //     $.ajax({
-        //       url: "http://localhost/PHP_REST_API/api_delete.php",
-        //       type: "POST",
-        //       data: myJson,
-        //       success: function (data) {
-        //         message(data.message, data.status);
-        //         if (data.status === true) {
-        //           loadtable();
-        //           $(row).closest("tr").fadeOut();
-        //         }
-        //       },
-        //     });
-        //   }
-        // });
+        $(document).on("click", ".delete-btn", function () {
+          if (confirm("Do you want to delete this record?")) {
+            var studentId = $(this).data("id");
+            var obj = { sid: studentId };
+            var myJson = JSON.stringify(obj);
+            var row = this;
+            $.ajax({
+              url: "http://localhost/PHP_REST_API/api_delete.php",
+              type: "POST",
+              data: myJson,
+              success: function (data) {
+                message(data.message, data.status);
+                if (data.status === true) {
+                  loadtable();
+                  $(row).closest("tr").fadeOut();
+                }
+              },
+            });
+          }
+        });
+        //Live Search
+        $("#search").on("keyup", function () {
+          var search_term = $(this).val();
+          $("#load-table").html("");
+          $.ajax({
+            url:
+              "http://localhost/PHP_REST_API/api_search.php?search=" +
+              search_term,
+            type: "GET",
+            success: function (data) {
+              if (data.status === false) {
+                //If api has no data
+                $("#load-table").append(
+                  "<tr><td colspan='6'><h2>" + data.message + "</h2></td></tr>"
+                );
+              } else {
+                //if api has data
+                $.each(data, function (key, value) {
+                  $("#load-table").append(
+                    "<tr>" +
+                      "<td>" +
+                      value.id +
+                      "</td>" +
+                      "<td>" +
+                      value.name +
+                      "</td>" +
+                      "<td>" +
+                      value.city +
+                      "</td>" +
+                      "<td>" +
+                      value.age +
+                      "</td>" +
+                      "<td><button class='edit-btn' data-eid='" +
+                      value.id +
+                      "'>Edit</button></td>" +
+                      "<td><button class='delete-btn' data-id='" +
+                      value.id +
+                      "'>Delete</button></td>" +
+                      "</tr>"
+                  );
+                });
+              }
+            },
+          });
+        });
       });
     </script>
   </body>
